[project]
name = "promptstrap"
version = "0.1.0"
description = ""
authors = [
    {name = "bigfatfrodo",email = "133560036+bigfatfrodo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "promptstrap", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
